--- a/css/style.css
+++ b/css/style.css
@@ -210,9 +210,9 @@ p {
     color: whitesmoke;
     text-transform: uppercase;
 }   
-.contact-header{
+/* .contact-header{
     margin-left: 30px;
-}
+} */
 
 .contact-form {
     padding: 20px 35px;
